RESOLVED FIXED 284688
RenderLayer::resize incorrectly assumes all elements are a StyledElement
https://bugs.webkit.org/show_bug.cgi?id=284688
Summary RenderLayer::resize incorrectly assumes all elements are a StyledElement
Anne van Kesteren
Reported 2024-12-13 23:33:11 PST
.
Attachments
Anne van Kesteren
Comment 1 2024-12-13 23:36:35 PST
EWS
Comment 2 2024-12-16 01:31:34 PST
Committed 287868@main (20515f132f54): <https://commits.webkit.org/287868@main> Reviewed commits have been landed. Closing PR #37964 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2024-12-16 01:32:20 PST
Note You need to log in before you can comment on or make changes to this bug.