RenderLayer::resize incorrectly assumes all elements are a StyledElement https://bugs.webkit.org/show_bug.cgi?id=284688

Reviewed by Tim Nguyen.

Also adopt some safe pointers in this method.

* LayoutTests/fast/css/resize-crash-expected.txt: Added.
* LayoutTests/fast/css/resize-crash.html: Added.
* LayoutTests/fast/css/resize-mutation-observer.html:

Cleanup copypasta in this test a bit while here.

* LayoutTests/platform/ios/TestExpectations:
* Source/WebCore/rendering/RenderLayer.cpp:
(WebCore::RenderLayer::resize):

Canonical link: https://commits.webkit.org/287868@main